<resources>
    <string name="app_name">EnlightMe</string>
    <string name="nav_button_creer">Créer</string>
    <string name="nav_button_charger">Charger</string>
    <string name="nav_button_rejoindre">Rejoindre</string>
    <string name="nav_button_suivant">Suivant</string>
    <string name="title_app">Enlight Me</string>
    <string name="sub_title_app">Le débat méthodique</string>
    <string name="hint_new_question">Question à deux réponses possibles</string>
    <string name="hint_intro_new_debat">Introduction au débat</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="possible_answers_title">Réponses possibles</string>
    <string name="possible_answers_para">Donner les réponses possibles à la question du débat. Par exemple \"pour\" ou
        \"contre\", \"oui\" ou \"non\", etc.
    </string>
    <string name="hint_side_2">Contre</string>
    <string name="hint_side_1">Pour</string>
    <string name="pseudo_title">Mon pseudo pour ce débat</string>
    <string name="hint_pseudo">Pseudo</string>
    <string name="debate_question">Question du débat</string>
    <string name="side_1_text">Pour</string>
    <string name="side_2_text">Contre</string>
    <string name="new_arg_dialogue_title_hint">Titre de l\'argument</string>
    <string name="new_arg_dialogue_details_hint">Détails sur l\'argument</string>
    <string name="new_arg_dialogue_ok">Valider</string>
    <string name="new_arg_dialogue_cancel">Annuler</string>
    <string name="side_not_filed">Les deux réponses possibles doivent être spécifiées</string>
    <string name="pseudo_not_filed">Le pseudo doit être spécifié</string>
    <string name="question_not_filled">La question doit être spécifiée</string>
    <string name="intro_not_filed">Une introduction au débat doit être spécifiée</string>
    <string name="activate_P2P">Créer un réseau</string>
    <string name="join_debate_title">Liste des débats en réseau</string>
    <string name="provide_user_name_title">Pseudo:</string>
    <string name="provide_user_name_hint">Entrez votre pseudo</string>*
    <string name="provide_user_name_ok">Ok</string>
    <string name="provide_user_name_cancel">Annuler</string>
</resources>
