<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
            android:id="@+id/const_layout">
        <!--Title Enlight Me-->
        <TextView
                android:text="@string/title_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title_app" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/margin_top_value" app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/domine" android:textSize="@dimen/title_text_size"
                android:textColor="@color/primary_text_color"
                android:textStyle="bold"/>
        <!--Sub title-->
        <TextView
                android:text="@string/sub_title_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" android:layout_marginTop="@dimen/space_1to2_level"
                app:layout_constraintTop_toBottomOf="@+id/title_app" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:fontFamily="@font/domine"
                android:textSize="@dimen/sub_title_text_size"
                android:textColor="@color/secondary_text_color"/>

        <!--The three button at the bottom of the screen to start activities-->
        <!--Create-->
        <com.google.android.material.button.MaterialButton
                android:text="@string/nav_button_creer"
                style="@style/nav_button"
                android:id="@+id/nav_button_creer"
                app:cornerRadius="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/nav_button_rejoindre"/>
        <!--Join-->
        <com.google.android.material.button.MaterialButton
                android:text="@string/nav_button_rejoindre"
                style="@style/nav_button"
                android:id="@+id/nav_button_rejoindre"
                app:cornerRadius="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/nav_button_charger"/>
        <!--Load-->
        <com.google.android.material.button.MaterialButton
                android:text="@string/nav_button_charger"
                style="@style/nav_button"
                android:id="@+id/nav_button_charger"
                app:cornerRadius="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="58dp" app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>