<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DebateActivity">
    <!--Debate Question-->
    <TextView
            android:text="@string/debate_question"
            android:id="@+id/debate_question"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/head_line_text"
            android:fontFamily="@font/roboto"/>
    <!--Side 1 header-->
    <TextView
            android:text="@string/side_2_text"
            android:id="@+id/side_1"
            style="@style/side_header"
            android:layout_marginTop="@dimen/space_1to2_level"
            app:layout_constraintTop_toBottomOf="@+id/debate_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/seperator" app:layout_constraintHorizontal_bias="0.5"
            android:width="@dimen/side_header_width" android:textAlignment="center"/>
    <TextView
            android:text="@string/side_1_text"
            android:id="@+id/side_"
            style="@style/side_header" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_1to2_level"
            app:layout_constraintTop_toBottomOf="@+id/debate_question" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/seperator"
            android:width="@dimen/side_header_width" android:textAlignment="center"/>
    <!-- Rectangle -->
    <View
            android:id="@+id/seperator"
            android:layout_width="5dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/space_1to2_level"
            app:layout_constraintTop_toBottomOf="@+id/debate_question"
            app:layout_constraintStart_toEndOf="@+id/side_"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/side_1"
            android:background="@drawable/separator"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_add_circle_grey_48dp"/>

    <!--android:elevation="4dp"-->
    <!--New argument pros-->
</androidx.constraintlayout.widget.ConstraintLayout>