<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="developer.android.com.enlightme.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/create1_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/debate_question" android:hint="@string/debate_question"
                android:fontFamily="@font/roboto"
                android:textAlignment="center" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="@dimen/margin_top_value"
                app:layout_constraintTop_toTopOf="parent" android:textSize="@dimen/head_line_text_size"
                android:height="@dimen/input_field_height"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:inputType="textMultiLine"
                android:gravity="start|top"
                android:ems="10"
                android:id="@+id/intro_new_debat" android:layout_marginTop="@dimen/space_1to2_level"
                app:layout_constraintTop_toBottomOf="@+id/debate_question"
                android:layout_marginEnd="@dimen/full_width_margin"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="@dimen/full_width_margin"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="@dimen/space_1to2_level"
                app:layout_constraintBottom_toTopOf="@+id/suivant_create_1" android:textSize="@dimen/base_text_size"
                android:fontFamily="@font/roboto" android:textAlignment="textStart"
                android:hint="@string/hint_intro_new_debat"/>
        <!--Load-->
        <com.google.android.material.button.MaterialButton
                android:text="@string/nav_button_suivant"
                style="@style/nav_button"
                android:id="@+id/suivant_create_1"
                app:cornerRadius="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="58dp" app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>