<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="developer.android.com.enlightme.MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/debate_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <!--Debate Question-->
        <TextView
                android:text="@string/debate_question"
                android:id="@+id/debate_question"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/head_line_text"
                android:fontFamily="@font/roboto" android:textColor="@color/primary_text_color"/>
        <!--Side 2 header-->
        <TextView
                android:text="@string/side_2_text"
                android:id="@+id/side_2"
                style="@style/side_header"
                android:layout_marginTop="@dimen/space_1to2_level"
                app:layout_constraintTop_toBottomOf="@+id/debate_question"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/seperator" app:layout_constraintHorizontal_bias="0.5"
                android:width="@dimen/side_header_width" android:textAlignment="center"
                android:fontFamily="@font/roboto"/>
        <!--Side 1 header-->
        <TextView
                android:text="@string/side_1_text"
                android:id="@+id/side_1"
                style="@style/side_header" android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_1to2_level"
                app:layout_constraintTop_toBottomOf="@+id/debate_question" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/seperator"
                android:width="@dimen/side_header_width" android:textAlignment="center"
                android:fontFamily="@font/roboto"
        />
        <!-- Rectangle -->
        <View
                android:id="@+id/seperator"
                android:layout_width="1dp"
                android:layout_height="200dp"
                android:elevation="6dp"
                android:layout_marginTop="@dimen/space_1to2_level"
                app:layout_constraintTop_toBottomOf="@+id/debate_question"
                app:layout_constraintStart_toEndOf="@+id/side_1"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/side_2"
                android:background="@drawable/separator"/>
        <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/side_1_arg_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:drawablePadding="0dp"
                app:maxImageSize="54dp"
                app:fabCustomSize="54dp"
                app:srcCompat="@drawable/ic_add_circle_grey_48dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:backgroundTint="#FFFFFF"
                app:layout_constraintHorizontal_bias="0.25"
                android:layout_marginBottom="@dimen/space_1to2_level"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/side_2_arg_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:drawablePadding="0dp"
                app:maxImageSize="54dp"
                app:fabCustomSize="54dp"
                app:srcCompat="@drawable/ic_add_circle_grey_48dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:backgroundTint="#FFFFFF"
                app:layout_constraintHorizontal_bias="0.75"
                android:layout_marginBottom="@dimen/space_1to2_level"/>
                -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/side_1"
                android:layout_marginTop="@dimen/space_1to2_level"
                android:id="@+id/arg_container"
                android:baselineAligned="false">

                <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/side_1_arg_container"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50" >
                </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/side_2_arg_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"/>

        </LinearLayout>

    <!--android:elevation="4dp"-->
        <!--New argument pros-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>